# mudro

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build_web_image.sh  docker-compose.yaml  init_quotes_raw.txt  init_to_sql.py  push_builded_web_image.sh
kub_conf/: mudro-app.yaml  mudro-config.yaml  postgres.yaml
kub_conf/conf1/: mudro-app.yaml  mudro-config.yaml  pg-secrets.yaml  postgres-pvc.yaml  postgres.yaml
migrations/: 20231213071709_author_quote.down.sql  20231213071709_author_quote.up.sql  20231213075308_init_data.down.sql  20231213075308_init_data.up.sql
nginx/: Dockerfile  nginx.conf
src/: main.rs  stages.md
src/crud/: author.rs  quote.rs
src/models/: author.rs  parameter.rs  quote.rs
src/routs/: authors.rs  main.rs  quotes.rs  router.rs
